--- a/index.html
+++ b/index.html
@@ -1,84 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Tuition Services</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        .container {
-            padding: 20px;
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-        h2 {
-            color: #4CAF50;
-        }
-        .service-list {
-            list-style-type: none;
-            padding: 0;
-        }
-        .service-list li {
-            margin-bottom: 10px;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Welcome to Your Tuition Services</h1>
-        <p>Your Trusted Tutor with Over 20 Years of Experience</p>
-    </header>
+/* Change the background color of the page */
+body {
+    background-color: #e0f7fa;
+}
 
-    <div class="container">
-        <h2>About My Services</h2>
-        <p>Are you looking for expert tuition services for Primary, Secondary, or IGCSE students? I offer personalized, professional tutoring in a wide range of subjects, including:</p>
-        <ul class="service-list">
-            <li><strong>Mathematics</strong></li>
-            <li><strong>Science</strong></li>
-            <li><strong>Accounting</strong></li>
-            <li><strong>English</strong></li>
-            <li><strong>Malay</strong></li>
-        </ul>
-        <p>With over <strong>20 years of experience</strong> as a qualified tutor, I am dedicated to helping students achieve their academic goals. Whether you're struggling with a specific topic or aiming to excel in exams, I provide tailored tutoring that focuses on your unique needs.</p>
+/* Style the header with a new background color */
+header {
+    background-color: #00796b;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
 
-        <h2>Services Offered</h2>
-        <ul class="service-list">
-            <li><strong>Individual Tutoring</strong>: One-on-one lessons for a focused learning experience.</li>
-            <li><strong>Small Group Sessions</strong>: Learn with a few classmates in a supportive, interactive environment.</li>
-            <li><strong>Flexible Learning</strong>: Online or in-person lessons that fit your schedule.</li>
-        </ul>
-        <p>Whether you are looking for help with homework, exam preparation, or understanding difficult concepts, I ensure a comprehensive approach to build your knowledge and confidence.</p>
+/* Style the links in the body */
+a {
+    color: #00796b;
+    text-decoration: none;
+}
 
-        <h2>Why Choose Me?</h2>
-        <ul class="service-list">
-            <li><strong>Qualified and Experienced</strong>: With over <strong>20 years of tutoring experience</strong>, I bring both expertise and passion to my lessons.</li>
-            <li><strong>Proven Results</strong>: My students have consistently shown improvement in their grades and understanding of subjects.</li>
-            <li><strong>Flexible Options</strong>: Choose between online or in-person lessons for your convenience.</li>
-        </ul>
+a:hover {
+    text-decoration: underline;
+}
 
-        <h2>Pricing & Availability</h2>
-        <p>I offer competitive pricing with flexible scheduling to accommodate your needs. Please contact me for more information on rates and availability.</p>
+/* Adjust the container for the content */
+.container {
+    padding: 30px;
+    max-width: 900px;
+    margin: 0 auto;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
-        <h2>Contact Information</h2>
-        <p>Ready to get started? Feel free to reach 
+/* Style the footer with a new background */
+footer {
+    background-color: #00796b;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+
