colour update.html

--- a/index.html
+++ b/index.html
@@ -1,41 +1,79 @@
-/* Change the background color of the page */
-body {
-    background-color: #e0f7fa;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Tuition Services</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f4f4f4; /* Light gray background for a clean look */
+            font-family: 'Roboto', sans-serif;
+        }
+        header {
+            background-color: #2c3e50; /* Professional navy blue */
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        .container {
+            padding: 30px;
+            max-width: 900px;
+            margin: 0 auto;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background-color: #2c3e50; /* Matching footer color */
+            color: white;
+            text-align: center;
+            padding: 10px;
+        }
+        .button {
+            background-color: #34495e; /* Slightly darker navy for buttons */
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .button:hover {
+            background-color: #1abc9c; /* Highlight color for hover */
+        }
+        h2 {
+            color: #2c3e50; /* Dark navy for headings */
+        }
+        a {
+            color: #34495e; /* Links in dark navy */
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to Your Tuition Services</h1>
+        <p>Your Trusted Tutor with Over 20 Years of Experience</p>
+    </header>
 
-/* Style the header with a new background color */
-header {
-    background-color: #00796b;
-    color: white;
-    padding: 20px;
-    text-align: center;
-}
+    <div class="container">
+        <h2>About My Services</h2>
+        <p>Are you looking for expert tuition services for Primary, Secondary, or IGCSE students? I offer personalized, professional tutoring in a wide range of subjects, including:</p>
+        <ul>
+            <li><strong>Mathematics</strong></li>
+            <li><strong>Science</strong></li>
+            <li><strong>Accounting</strong></li>
+            <li><strong>English</strong></li>
+            <li><strong>Malay</strong></li>
+        </ul>
+        <p>With over <strong>20 years of experience</strong> as a qualified tutor, I am dedicated to helping students achieve their academic goals.</p>
+        <button class="button">Contact Me</button>
+    </div>
 
-/* Style the links in the body */
-a {
-    color: #00796b;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-/* Adjust the container for the content */
-.container {
-    padding: 30px;
-    max-width: 900px;
-    margin: 0 auto;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-/* Style the footer with a new background */
-footer {
-    background-color: #00796b;
-    color: white;
-    text-align: center;
-    padding: 10px;
-}
-
+    <footer>
+        <p>&copy; 2025 Your Tuition Services</p>
+    </footer>
+</body>
+</html>
