--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Tuition Services</title>
+    <title>Sunny Education - Tuition Services</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -50,30 +50,53 @@
         a:hover {
             text-decoration: underline;
         }
+        .subject-list {
+            list-style-type: none;
+            padding-left: 0;
+        }
+        .subject-list li {
+            padding: 5px 0;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to Your Tuition Services</h1>
-        <p>Your Trusted Tutor with Over 20 Years of Experience</p>
+        <h1>Sunny Education</h1>
+        <p>Your Trusted Tuition Center with Over 20 Years of Experience</p>
     </header>
 
     <div class="container">
-        <h2>About My Services</h2>
-        <p>Are you looking for expert tuition services for Primary, Secondary, or IGCSE students? I offer personalized, professional tutoring in a wide range of subjects, including:</p>
-        <ul>
+        <h2>About Sunny Education</h2>
+        <p>At Sunny Education, we provide top-quality tutoring services for Primary, Secondary, and IGCSE students. With over <strong>20 years of experience</strong> and a team of qualified tutors, we are committed to helping students excel academically.</p>
+        
+        <h3>Subjects We Offer</h3>
+        <ul class="subject-list">
             <li><strong>Mathematics</strong></li>
             <li><strong>Science</strong></li>
             <li><strong>Accounting</strong></li>
             <li><strong>English</strong></li>
             <li><strong>Malay</strong></li>
         </ul>
-        <p>With over <strong>20 years of experience</strong> as a qualified tutor, I am dedicated to helping students achieve their academic goals.</p>
-        <button class="button">Contact Me</button>
+
+        <h3>Our Services</h3>
+        <p>We offer a variety of flexible tutoring options, including:</p>
+        <ul>
+            <li>1-on-1 personalized sessions</li>
+            <li>Small group sessions</li>
+            <li>Online lessons</li>
+            <li>In-person lessons (at our center or your location)</li>
+        </ul>
+
+        <h3>Contact Information</h3>
+        <p>If you're interested in our services, please don't hesitate to reach out:</p>
+        <p><strong>Phone/WhatsApp:</strong> <a href="tel:+60195739033">+60 195 739 033</a></p>
+        <p><strong>Location:</strong> Island Glades, Greenlane</p>
+
+        <button class="button">Contact Us</button>
     </div>
 
     <footer>
-        <p>&copy; 2025 Your Tuition Services</p>
+        <p>&copy; 2025 Sunny Education. All rights reserved.</p>
     </footer>
 </body>
 </html>
