--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <li>1-on-1 personalized sessions</li>
             <li>Small group sessions</li>
             <li>Online lessons</li>
-            <li>In-person lessons (at our center or your location)</li>
+            <li>In-person lessons </li>
         </ul>
 
         <h3>Contact Information</h3>
