--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div class="container">
         <h2>About Sunny Education</h2>
-        <p>At Sunny Education, we provide top-quality tutoring services for Primary, Secondary, and IGCSE students. With over <strong>20 years of experience</strong> and a team of qualified tutors, we are committed to helping students excel academically.</p>
+        <p>At Sunny Education, we combine over <strong>20 years of experience</strong> with cutting-edge AI tools to provide personalized tutoring for Primary, Secondary, and IGCSE students. Our team of qualified tutors creates customized learning programs tailored to each student’s unique needs, ensuring they excel academically with the help of the latest educational technology</p>
         
         <h3>Subjects We Offer</h3>
         <ul class="subject-list">
