--- a/index.html
+++ b/index.html
@@ -62,41 +62,35 @@
 <body>
     <header>
         <h1>Sunny Education</h1>
-        <p>Your Trusted Tuition Center with Over 20 Years of Experience</p>
+        <p>AI-Enhanced Tuition Services for Primary, Secondary, and IGCSE Students</p>
     </header>
 
     <div class="container">
         <h2>About Sunny Education</h2>
-        <p>At Sunny Education, we combine over <strong>20 years of experience</strong> with cutting-edge AI tools to provide personalized tutoring for Primary, Secondary, and IGCSE students. Our team of qualified tutors creates customized learning programs tailored to each student’s unique needs, ensuring they excel academically with the help of the latest educational technology</p>
+        <p>At Sunny Education, we combine over <strong>20 years of experience</strong> with the power of cutting-edge AI technology to provide personalized tutoring. We offer specialized programs for Primary, Secondary, and IGCSE students, designed to cater to their unique learning needs. Our expert tutors work closely with students, using AI tools to monitor progress, identify learning gaps, and provide instant feedback, ensuring that each student receives the highest quality education.</p>
         
+        <h3>How AI Enhances Learning</h3>
+        <p>We leverage artificial intelligence to:</p>
+        <ul>
+            <li><strong>Customize Learning Plans:</strong> AI helps create personalized study paths for students, adapting to their learning speed and areas that need improvement.</li>
+            <li><strong>Track Progress:</strong> Real-time feedback through AI tools helps students and tutors track progress, adjust methods, and set achievable goals.</li>
+            <li><strong>Instant Support:</strong> With AI-powered learning platforms, students can access immediate help on topics they’re struggling with, even outside tutoring hours.</li>
+            <li><strong>Optimize Performance:</strong> Our AI technology analyzes test results and learning behaviors to suggest the most effective strategies for improvement.</li>
+        </ul>
+
         <h3>Subjects We Offer</h3>
         <ul class="subject-list">
-            <li><strong>Mathematics</strong></li>
-            <li><strong>Science</strong></li>
-            <li><strong>Accounting</strong></li>
-            <li><strong>English</strong></li>
-            <li><strong>Malay</strong></li>
+            <li><strong>Mathematics</strong> - From basic arithmetic to advanced calculus, we make math easy to understand.</li>
+            <li><strong>Science</strong> - Physics, Chemistry, Biology – all subjects covered with an engaging, hands-on approach.</li>
+            <li><strong>Accounting</strong> - Learn the foundations of accounting principles with real-life applications.</li>
+            <li><strong>English</strong> - Improve writing, reading, and speaking skills tailored to your level.</li>
+            <li><strong>Malay</strong> - Master both conversational and written Malay through interactive lessons.</li>
         </ul>
 
         <h3>Our Services</h3>
-        <p>We offer a variety of flexible tutoring options, including:</p>
+        <p>We offer a variety of flexible tutoring options to match every student’s learning style and schedule:</p>
         <ul>
-            <li>1-on-1 personalized sessions</li>
-            <li>Small group sessions</li>
-            <li>Online lessons</li>
-            <li>In-person lessons </li>
-        </ul>
-
-        <h3>Contact Information</h3>
-        <p>If you're interested in our services, please don't hesitate to reach out:</p>
-        <p><strong>Phone/WhatsApp:</strong> <a href="tel:+60195739033">+60 195 739 033</a></p>
-        <p><strong>Location:</strong> Island Glades, Greenlane</p>
-
-        <button class="button">Contact Us</button>
-    </div>
-
-    <footer>
-        <p>&copy; 2025 Sunny Education. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+            <li><strong>1-on-1 Personalized Sessions:</strong> Tailored lessons designed to meet your individual needs and pace.</li>
+            <li><strong>Small Group Sessions:</strong> Collaborative learning with like-minded peers to foster teamwork and problem-solving skills.</li>
+            <li><strong>Online Lessons:</strong> Convenient and flexible online tutoring, available anywhere, anytime.</li>
+            <li><strong>In-person Lessons:</strong> Engage in interactive, face-to-face learning at our cen
