--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunny Education - Tuition Services</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             background-color: #f4f4f4; /* Light gray background for a clean look */
@@ -15,6 +16,11 @@
             color: white;
             padding: 20px;
             text-align: center;
+        }
+        header img {
+            max-width: 150px; /* Set maximum width for logo */
+            display: block;
+            margin: 0 auto 10px; /* Center the logo */
         }
         .container {
             padding: 30px;
@@ -61,6 +67,7 @@
 </head>
 <body>
     <header>
+        <img src="path/to/your/logo.png" alt="Sunny Education Logo"> <!-- Replace with your logo -->
         <h1>Sunny Education</h1>
         <p>AI-Enhanced Tuition Services for Primary, Secondary, and IGCSE Students</p>
     </header>
@@ -75,48 +82,4 @@
             <li><strong>Customize Learning Plans:</strong> AI helps create personalized study paths for students, adapting to their learning speed and areas that need improvement.</li>
             <li><strong>Track Progress:</strong> Real-time feedback through AI tools helps students and tutors track progress, adjust methods, and set achievable goals.</li>
             <li><strong>Instant Support:</strong> With AI-powered learning platforms, students can access immediate help on topics they’re struggling with, even outside tutoring hours.</li>
-            <li><strong>Optimize Performance:</strong> Our AI technology analyzes test results and learning behaviors to suggest the most effective strategies for improvement.</li>
-        </ul>
-
-        <h3>Subjects We Offer</h3>
-        <ul class="subject-list">
-            <li><strong>Mathematics</strong> - From basic arithmetic to advanced calculus, we make math easy to understand.</li>
-            <li><strong>Science</strong> - Physics, Chemistry, Biology – all subjects covered with an engaging, hands-on approach.</li>
-            <li><strong>Accounting</strong> - Learn the foundations of accounting principles with real-life applications.</li>
-            <li><strong>English</strong> - Improve writing, reading, and speaking skills tailored to your level.</li>
-            <li><strong>Malay</strong> - Master both conversational and written Malay through interactive lessons.</li>
-        </ul>
-
-        <h3>Our Services</h3>
-        <p>We offer a variety of flexible tutoring options to match every student’s learning style and schedule:</p>
-        <ul>
-            <li><strong>1-on-1 Personalized Sessions:</strong> Tailored lessons designed to meet your individual needs and pace.</li>
-            <li><strong>Small Group Sessions:</strong> Collaborative learning with like-minded peers to foster teamwork and problem-solving skills.</li>
-            <li><strong>Online Lessons:</strong> Convenient and flexible online tutoring, available anywhere, anytime.</li>
-            <li><strong>In-person Lessons:</strong> Engage in interactive, face-to-face learning at our center or in your preferred location.</li>
-        </ul>
-
-        <h3>Why Choose Us?</h3>
-        <p>Sunny Education is committed to academic excellence through a combination of experience and modern technology. Here’s what sets us apart:</p>
-        <ul>
-            <li><strong>Expert Tutors:</strong> Our team consists of highly qualified tutors with years of experience in their respective fields.</li>
-            <li><strong>AI-Enhanced Learning:</strong> We use advanced tools to optimize learning, making it efficient, interactive, and fun.</li>
-            <li><strong>Flexible Learning Options:</strong> Whether you prefer in-person or online sessions, we adapt to your needs.</li>
-            <li><strong>Proven Results:</strong> Our students consistently achieve top grades and develop a deep understanding of their subjects.</li>
-        </ul>
-
-        <h3>Contact Information</h3>
-        <p>If you're interested in our services or have any questions, feel free to get in touch:</p>
-        <p><strong>Phone/WhatsApp:</strong> <a href="tel:+60195739033">+60 195 739 033</a></p>
-        <p><strong>Email:</strong> <a href="mailto:limml2002@gmail.com">limml2002@gmail.com</a></p>
-        <p><strong>Location:</strong> Island Glades, Greenlane</p>
-
-        <button class="button">Contact Us</button>
-    </div>
-
-    <footer>
-        <p>&copy; 2025 Sunny Education. All rights reserved.</p>
-    </footer>
-</body>
-</html>
-
+            <li><strong>Optimize Performance:</strong> Our AI technology analyzes test results and learni
