--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 </head>
 <body>
     <header>
-        <img src="path/to/your/logo.png" alt="Sunny Education Logo"> <!-- Replace with your logo -->
+        <img src="https://github.com/jzipoh/sunnyeducation/raw/main/363c5f0b-9e86-42a8-b991-c5e52ab77d46.webp" alt="Sunny Education Logo">
+
         <h1>Sunny Education</h1>
         <p>AI-Enhanced Tuition Services for Primary, Secondary, and IGCSE Students</p>
     </header>
